// elements/onboarding_elements.js

output.onboardingPage = {
    welcomeTitle: "What brings you to Vethos?",
    justExploringCard: "Just Exploring",
    nextButton: "Next",
    skipButton: "Skip",
    personalAssistantTitle: "Personal Assistant",
    onDeviceTitle: "100% On-Device",
    startExploringButton: "Start exploring",
    brandHeader: "Vethos",
    workspacePrompt: "What can we do for you?",
    agentLoadingStatus: "Your agent is suiting up…"
};

// output.dashboardPage = {
//     brandHeader: "Vethos",
//     workspacePrompt: "What can we do for you?",
//     agentLoadingStatus: "Your agent is suiting up…"
// };