// elements/login_page.js
output.loginPage = {
    vethosButton: "Vethos",     // resource ID
    homeButton: "Home",
    agentDownload: "rvMyAgents",









    // emailField: "email_input_id",      // resource ID
    // passwordField: "password_input_id",  // resource ID
    // signInButton: "Sign In",            // Text or accessibility label
    // errorPopup: "Invalid credentials"   // Text assertion
    // passwordField: "password_input_id",  // resource ID
    // signInButton: "Sign In",            // Text or accessibility label
    // errorPopup: "Invalid credentials"   // Text assertion
};